@@ -1,5 +1,5 @@
 #
-# $Id: rules.cf,v 1.1.1.1 2001/12/21 10:47:57 ronpinkas Exp $
+# $Id: rules.cf,v 1.2 2002/12/15 23:06:01 ronpinkas Exp $
 #
 
 # How to run yacc.
@@ -60,6 +60,14 @@ else
 # Rule to generate an object file from a C source file.
 %$(OBJ_EXT) : %.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) $(C_USR) $(CC_IN) $? $(CC_OUT)$(?:.c=$(OBJ_EXT))
+endif
+
+#rules for CPP files
+%$(OBJ_EXT) : $(SOURCE_DIR)%.cpp
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(C_USR) $(CC_IN) $? $(CC_OUT)$(subst .cpp,$(OBJ_EXT),$(subst $(SOURCE_DIR),,$?))
+
+%$(OBJ_EXT) : %.cpp
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(C_USR) $(CC_IN) $? $(CC_OUT)$(?:.cpp=$(OBJ_EXT))
 endif
 
 # Rule to generate an executable file from an object file.
